--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 kotlin.code.style=official
 pluginGroup=com.github.noonmaru
-pluginName=SamplePlugin
-pluginMain=com.github.noonmaru.sample.plugin.SamplePlugin
+pluginName=Winventory
+pluginMain=com.github.noonmaru.winventory.plugin.WinventoryPlugin
 pluginVersion=0.1
