--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,7 @@
 name: $pluginName
 main: $pluginMain
-depend: [Kotlin, Tap]
+depend: ['Kotlin']
 api-version: '1.13'
 version: $pluginVersion
+commands:
+  winventory:
