--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 kotlin.code.style=official
 pluginGroup=com.github.noonmaru
-pluginName=Winventory
-pluginMain=com.github.noonmaru.winventory.plugin.WinventoryPlugin
+pluginName=InvFX
+pluginMain=com.github.noonmaru.invfx.plugin.InvFXPlugin
 pluginVersion=0.2
