--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 kotlin.code.style=official
-pluginGroup=com.github.noonmaru
+group=com.github.noonmaru
+version=1.0.2
 pluginName=InvFX
 pluginMain=com.github.noonmaru.invfx.plugin.InvFXPlugin
-pluginVersion=1.0.2
