--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,4 @@
 language: java
-sudo: true
 jdk:
   - openjdk8
 
@@ -9,9 +8,15 @@ branches:
     - develop
 
 before_install:
+  - wget https://raw.githubusercontent.com/noonmaru/travis-ci-buildtools/master/buildtools.sh
+  - chmod +x buildtools.sh
+  - ./buildtools.sh 1.16.3 1.16.1 1.15.2 1.14.4 1.13.2
   - chmod +x ./gradlew
 
 cache:
   directories:
     - '$HOME/.m2'
     - '$HOME/.gradle'
+
+script:
+  - ./gradlew clean test
