--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: java
 jdk:
-  - openjdk8
+  - openjdk11
 
 branches:
   only:
@@ -8,10 +8,10 @@ branches:
     - develop
 
 before_install:
-  - wget https://raw.githubusercontent.com/noonmaru/travis-ci-buildtools/master/buildtools.sh
-  - chmod +x buildtools.sh
-  - ./buildtools.sh 1.16.3
   - chmod +x ./gradlew
+
+install:
+  - './gradlew setupWorkspace'
 
 cache:
   directories:
