--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 kotlin.code.style=official
-group=com.github.noonmaru
-version=1.3.1
+group=com.github.monun
+version=1.4.0
 pluginName=InvFX
-pluginMain=com.github.noonmaru.invfx.plugin.InvFXPlugin
+pluginMain=com.github.monun.invfx.plugin.InvFXPlugin
