Updated outdated code
Updated all versions of all gradle dependencies to the latest version. Changed root package name from com to io. Upated gradle wrapper from 6.9 to 7.1.1. Edited kommand code due to update to 2.0.0. Updated readme dependencies list. Copied tap's server.sh and updated the current one.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 kotlin.code.style=official
-group=com.github.monun
+group=io.github.monun
 version=2.1.0
 pluginName=InvFX
-pluginMain=com.github.monun.invfx.plugin.InvFXPlugin
+pluginMain=io.github.monun.invfx.plugin.InvFXPlugin
