--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,3 @@
 kotlin.code.style=official
 group=com.github.monun
-version=2.1.0
-pluginName=InvFX
-pluginMain=com.github.monun.invfx.plugin.InvFXPlugin
+version=2.2.0-SNAPSHOT
